[gd_scene load_steps=9 format=4]

[ext_resource type="Script" path="res://src/scenes/LevelEditor/image_trimmer.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cs406748fx3e6" path="res://assets/tmp/tmp_placeholder.png" id="2"]
[ext_resource type="Script" path="res://src/scenes/LevelEditor/preview_animation.gd" id="3"]
[ext_resource type="Script" path="res://src/scenes/LevelEditor/frame_slider.gd" id="4"]
[ext_resource type="FontFile" uid="uid://d7c47gg7ttb5" path="res://assets/font/anton/Anton-Regular.ttf" id="5"]

[sub_resource type="SpriteFrames" id="1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2")
}],
"loop": true,
"name": &"default",
"speed": 24.0
}]
script = null

[sub_resource type="StyleBoxFlat" id="2"]
bg_color = Color(0.2, 0.2, 0.2, 1)
border_width_left = 30
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(0.199219, 0.199219, 0.199219, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
script = null

[sub_resource type="LabelSettings" id="3"]
font = ExtResource("5")
font_size = 40
script = null

[node name="ImageTrimmer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="PreviewAnimation" type="AnimatedSprite2D" parent="."]
position = Vector2(960, 428)
sprite_frames = SubResource("1")
script = ExtResource("3")

[node name="TrimBefore" type="Button" parent="."]
layout_mode = 0
offset_left = 680.0
offset_top = 856.0
offset_right = 848.0
offset_bottom = 898.0
focus_mode = 0
theme_override_font_sizes/font_size = 16
text = "TRIM PREVIOUS"

[node name="SetStart" type="Button" parent="."]
layout_mode = 0
offset_left = 856.0
offset_top = 856.0
offset_right = 1064.0
offset_bottom = 898.0
focus_mode = 0
theme_override_font_sizes/font_size = 16
text = "SET START"

[node name="TrimAfter" type="Button" parent="."]
layout_mode = 0
offset_left = 1072.0
offset_top = 856.0
offset_right = 1248.0
offset_bottom = 898.0
focus_mode = 0
theme_override_font_sizes/font_size = 16
text = "TRIM FOLLOWING"

[node name="ImportButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1616.0
offset_top = 952.0
offset_right = 1892.0
offset_bottom = 1015.0
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = "IMPORT"

[node name="PlayButton" type="Button" parent="."]
layout_mode = 0
offset_left = 760.0
offset_top = 801.0
offset_right = 888.0
offset_bottom = 839.0
focus_mode = 0
text = "Play"

[node name="PauseButton" type="Button" parent="."]
layout_mode = 0
offset_left = 896.0
offset_top = 801.0
offset_right = 1024.0
offset_bottom = 839.0
focus_mode = 0
text = "Pause"

[node name="StopButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1032.0
offset_top = 801.0
offset_right = 1160.0
offset_bottom = 839.0
focus_mode = 0
text = "Stop"

[node name="FrameSlider" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -472.0
offset_top = -160.0
offset_right = 471.0
offset_bottom = -112.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/slider = SubResource("2")
min_value = 1.0
step = 0.0
value = 50.0
rounded = true
script = ExtResource("4")

[node name="CancelButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1616.0
offset_top = 1023.0
offset_right = 1894.0
offset_bottom = 1059.0
focus_mode = 0
text = "CANCEL"

[node name="FrameIndicator" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -96.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
text = "0 : 0"
label_settings = SubResource("3")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_up" from="TrimBefore" to="." method="_on_trim_before_button_up"]
[connection signal="button_up" from="SetStart" to="." method="_on_set_start_button_up"]
[connection signal="button_up" from="TrimAfter" to="." method="_on_trim_after_button_up"]
[connection signal="button_up" from="ImportButton" to="." method="import_to_project"]
[connection signal="button_up" from="PlayButton" to="PreviewAnimation" method="_on_play_button_button_up"]
[connection signal="button_up" from="PauseButton" to="PreviewAnimation" method="_on_pause_button_button_up"]
[connection signal="button_up" from="StopButton" to="PreviewAnimation" method="_on_stop_button_button_up"]
[connection signal="drag_started" from="FrameSlider" to="FrameSlider" method="_on_drag_started"]
[connection signal="value_changed" from="FrameSlider" to="FrameSlider" method="_on_value_changed"]
[connection signal="button_up" from="CancelButton" to="." method="_on_cancel_button_button_up"]
